// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sale type artworksConnection returns data from gravity 1`] = `
{
  "sale": {
    "artworksConnection": {
      "edges": [
        {
          "node": {
            "slug": "some-id",
          },
        },
        {
          "node": {
            "slug": "some-id",
          },
        },
        {
          "node": {
            "slug": "some-id",
          },
        },
        {
          "node": {
            "slug": "some-id",
          },
        },
        {
          "node": {
            "slug": "some-id",
          },
        },
        {
          "node": {
            "slug": "some-id",
          },
        },
        {
          "node": {
            "slug": "some-id",
          },
        },
        {
          "node": {
            "slug": "some-id",
          },
        },
        {
          "node": {
            "slug": "some-id",
          },
        },
        {
          "node": {
            "slug": "some-id",
          },
        },
      ],
      "pageInfo": {
        "hasNextPage": true,
      },
      "totalCount": 20,
    },
  },
}
`;

exports[`Sale type saleArtworksConnection accepts the all argument 1`] = `
{
  "sale": {
    "saleArtworksConnection": {
      "edges": [
        {
          "node": {
            "slug": "sa-slug-0",
          },
        },
        {
          "node": {
            "slug": "sa-slug-1",
          },
        },
      ],
    },
  },
}
`;

exports[`Sale type saleArtworksConnection accepts the internalIDs argument 1`] = `
{
  "sale": {
    "saleArtworksConnection": {
      "edges": [
        {
          "node": {
            "slug": "sa-slug-0",
          },
        },
        {
          "node": {
            "slug": "sa-slug-1",
          },
        },
      ],
    },
  },
}
`;

exports[`Sale type saleArtworksConnection returns data from gravity 1`] = `
{
  "sale": {
    "saleArtworksConnection": {
      "edges": [
        {
          "node": {
            "slug": "some-id",
          },
        },
        {
          "node": {
            "slug": "some-id",
          },
        },
        {
          "node": {
            "slug": "some-id",
          },
        },
        {
          "node": {
            "slug": "some-id",
          },
        },
        {
          "node": {
            "slug": "some-id",
          },
        },
        {
          "node": {
            "slug": "some-id",
          },
        },
        {
          "node": {
            "slug": "some-id",
          },
        },
        {
          "node": {
            "slug": "some-id",
          },
        },
        {
          "node": {
            "slug": "some-id",
          },
        },
        {
          "node": {
            "slug": "some-id",
          },
        },
      ],
      "pageInfo": {
        "hasNextPage": true,
      },
    },
  },
}
`;
